--- a/config/botConfig.json
+++ b/config/botConfig.json
@@ -1,5 +1,5 @@
 {
-  "prefix" : "%",
+  "prefix" : "&",
   "token" : "MzAzMjk2NjI5Mzk2NzMzOTUz.C9WCpQ.QKlkCGIfMGa0i2h5KK4Vg9FKfG8",
   "refreshRate" : 10000,
   "replyTimeLimit" : 20000,
